# Banksia

./: .gitignore  CMakeLists.txt  README.md  engines.json  tour.json
data/: eco.pgn
jsonexamples/: engines.json
projects/: Banksia.sln  Banksia.vcxproj  Banksia.vcxproj.filters  banksia  c.sh
projects/banksia.xcodeproj/: project.pbxproj
projects/banksia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/banksia.xcodeproj/project.xcworkspace/xcuserdata/nguyenpham.xcuserdatad/: UserInterfaceState.xcuserstate
projects/banksia.xcodeproj/project.xcworkspace/xcuserdata/nguyenpham.xcuserdatad/xcdebugger/: Expressions.xcexplist
projects/banksia.xcodeproj/xcshareddata/xcschemes/: Banksia.xcscheme
projects/banksia.xcodeproj/xcuserdata/nguyenpham.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
projects/banksia.xcodeproj/xcuserdata/nguyenpham.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: CMakeLists.txt  main.cpp
src/base/: CMakeLists.txt  base.cpp  base.h  comm.cpp  comm.h
src/chess/: CMakeLists.txt  chess.cpp  chess.h  mytbprobe.cpp  mytbprobe.h
src/chess/syzygy/: tbprobe.cpp  tbprobe.h
src/game/: CMakeLists.txt  book.cpp  book.h  configmng.cpp  configmng.h  engine.cpp  engine.h  engineprofile.cpp  engineprofile.h  game.cpp  game.h  jsonengine.cpp  jsonengine.h  jsonmaker.cpp  jsonmaker.h  jsonmaker.temp_caseinsensitive_rename.cpp  memcpu.cpp  memcpu.h  player.cpp  player.h  playermng.cpp  playermng.h  time.cpp  time.h  tourmng.cpp  tourmng.h  uciengine.cpp  uciengine.h  wbengine.cpp  wbengine.h
